# setup-environment-Cristian-DP

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  informe.md  script.sh  script_RUN_COVERAGE.sh  script_RUN_TEST.sh  script_doc.sh  script_lab0.sh
.github/workflows/: QAWorkflow.yml
SQA/: Cdash-up.sh  Pipeline.cmake
docs/: Doxyfile
include/: MathFunctions.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: dynamic.h
lib/libdyn/src/: dynamic.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: MathFunctions.c  main.c
tests/: CMakeLists.txt
tests/unity/: main.c
